<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_setEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.Button.Colored"
        android:text="@string/txt_setEvent"
        android:padding="10dp"
        android:layout_margin="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Contacts"
        android:layout_width="match_parent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/txt_contacts"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Images"
        android:layout_width="match_parent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/txt_image"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Maps"
        android:layout_width="match_parent"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/txtMAp"/>

</LinearLayout>